--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@
             clip: rect(0, 0, 0, 0);
             border: 0;
         }
+        name1{
+            font-size=14px;
+            font-weight:100;
+        }
+        name{
+                color:black;
+                font-weight:400;
+                font-size:20px;
+            }
     </style>
 </head>
 <body>
@@ -276,6 +285,7 @@
             </div>
             <button type="submit">Submit</button>
         </form>
+        <div class="name1">created with &#128155 by <span class="name">KAGIRI PETERSON</span> </div>
     </div>
 
     <script>
